@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-09-06] RFC4880: added Check() and Reduce() for TMCG_OpenPGP_Keyring
 * [2018-09-03] RFC4880: added tmcg_openpgp_secure_string[stream]_t
 * [2018-09-03] RFC4880: added 1-/2-octet length format in PacketLengthEncode()
 * [2018-08-31] RFC4880: added support for EdDSA (algorithm 22) from RFC 4880bis
@@ -17,7 +18,7 @@ in the sources of this package and additionally can be obtained from Internet
 * [2018-08-23] RFC4880: added PacketSigPrepareTimestampSignature()
 * [2018-08-22] RFC4880: reorder preferred hash algorithms by hash length
 * [2018-08-22] RFC4880: added support for creating Issuer Fingerprint subpacket
-* [2018-08-18] RFC4880: added list() for TMCG_OpenPGP_Keyring
+* [2018-08-18] RFC4880: added List() for TMCG_OpenPGP_Keyring
 * [2018-08-17] RFC4880: added types and functions for use of secure memory
 * [2018-08-16] init_libTMCG(): added parameter to enforce use of secure memory
 * [2018-08-15] RFC4880: added Asymmetric[De|En]cryptECDH() from RFC 6637
